@@ -17,6 +17,8 @@ Changes log
       - Throwing a ResourceException with a given status, was resulting in
         500 status being returned to the client instead of the given status.
         Reported by Avi Flax and Rhett Sutphin.
+      - Fixed bug with unlimited IO timeouts in internal HTTP connector.
+        Reported by Michael Guiral.
     - Misc
       - The simplified logging formatter (one line) is now available only in
         the Java SE edition as it could cause troubles with Java EE container
